# warmi_filesys

./: .clang-format  .clangd  CMakeLists.txt  README.md  README_THREADS.md  input_thread0.txt  input_thread1.txt  input_thread2.txt  input_thread3.txt  warmi_fs
include/: filesystem.h  tree_node.h
src/: filesystem.c  main.c  tree_node.c
